escrita e revisão busca local, falta feedback da cris

--- a/aprox.bib
+++ b/aprox.bib
@@ -229,3 +229,22 @@ keywords = {approximation algorithms, k-median, dependent rounding, facility loc
   mathscinet = {http://mathscinet.ams.org/mathscinet-getitem?mr=0522052},
   zentralblatt = {https://zbmath.org/?q=an:0414.90086}
 }
+
+@article{HSBottle,
+author = {Hochbaum, Dorit S. and Shmoys, David B.},
+title = {A Unified Approach to Approximation Algorithms for Bottleneck Problems},
+year = {1986},
+issue_date = {July 1986},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {33},
+number = {3},
+issn = {0004-5411},
+url = {https://doi.org/10.1145/5925.5933},
+doi = {10.1145/5925.5933},
+abstract = {In this paper a powerful, and yet simple, technique for devising approximation algorithms for a wide variety of NP-complete problems in routing, location, and communication network design is investigated. Each of the algorithms presented here delivers an approximate solution guaranteed to be within a constant factor of the optimal solution. In addition, for several of these problems we can show that unless P = NP, there does not exist a polynomial-time algorithm that has a better performance guarantee.},
+journal = {J. ACM},
+month = {may},
+pages = {533–550},
+numpages = {18}
+}
